fix: Resolved light theme background issue
Description:
- Corrected background in light theme
- Applied overflow-y: auto for scroll functionality
- Styled the scrollbar for improved visual appeal

--- a/src/styles/verticalWeekView.module.sass
+++ b/src/styles/verticalWeekView.module.sass
@@ -16,7 +16,7 @@
     background: $light-theme-calendar-background-color
     box-shadow: 10px 10px 20px #e6e6e6, -10px -10px 20px #ffffff
 
-#calendarMain
+#calendarMainDark,#calendarMainLight
     height: 155px
     width: 140px
     padding: 7.5px 5px
@@ -30,6 +30,8 @@
     -ms-user-select: none
     user-select: none
     border-radius: 22.5px
+    background: #f5f5f5
+#calendarMainDark
     background: #191919
 
 #calendarHeaderParent
@@ -39,7 +41,7 @@
     align-items: center
     justify-content: center
     padding-inline: 5px
-#calendarHeader
+#calendarHeaderDark, #calendarHeaderLight
     padding: 5px
     height: 70px
     min-width: 110px
@@ -51,7 +53,7 @@
     -webkit-user-select: none
     -ms-user-select: none
     user-select: none
-    background: #191919
+    background: #f5f5f5
     border-radius: 22.5px
     #calendarHeaderDetailsLight, #calendarHeaderDetailsDark
         height: 100%
@@ -75,20 +77,41 @@
         margin: 0px
         text-align: center
         font-size: 9px
+#calendarHeaderDark
+    background: #191919
 
-#calendarFooter
+#calendarFooterDark,#calendarFooterLight
     width: 140px
     min-height: 85px
-    height: auto
+    max-height: 140px
     display: grid
     align-items: center
     justify-content: end
     margin: 0
     padding: 5px
     border-radius: 22.5px
-    background: #191919
+    background: #f5f5f5
+    overflow-y: auto
     > *
         width: 130px
+    &::-webkit-scrollbar
+        width: 5px
+        background: transparent
+    &::-webkit-scrollbar-thumb
+        background-color: #757575
+        border-radius: 3px
+        width: 3px
+        border: 1px solid #f5f5f5
+    &::-webkit-scrollbar-track
+        background: #f5f5f5
+    &::-webkit-scrollbar-button
+        background: transparent
+#calendarFooterDark
+    background: #191919
+    &::-webkit-scrollbar-thumb
+        border: 1px solid #191919
+    &::-webkit-scrollbar-track
+        background: #191919
 
 .mainDayLight, .mainDayDark
     width: 100%
